# bai2

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements-tests.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml  test.yml
bai2/: __init__.py  bai2.py  conf.py  constants.py  exceptions.py  helpers.py  models.py  parsers.py  utils.py  writers.py
docs/: Makefile  bai2.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __main__.py  test_bai2.py  test_conf.py  test_parsers.py  test_style.py  test_utils.py  test_writers.py
tests/data/: account_trailer_amount_blank_example.bai2  citi_example.bai2  example2.bai2  svb_us_example.bai2
